--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello, World</h1>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>gouellet</tile>
+  </head>
+  <body>
+  </body>
+</html>
